--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+v1.1.6
+- Added KeepQty setting to delete old backups and only keep the latest N backups.
+  - KeepQty=5 would keep just the latest 5 backups.
+
 v1.0.5
 - Bug fix for default conf file. Double quotes not needed and cause issue #11 
 - Updated Restore_Linux_Plex_Backup.sh to handle reading settings from conf file with spaces and no double quotes.
