--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+v1.2.7
+- Added optional support to send an email of the log after a backup.
+  - Set the to and from email addresses in backup_linux_plex.config
+
 v1.1.6
 - Added KeepQty setting to delete old backups and only keep the latest N backups.
   - KeepQty=5 would keep just the latest 5 backups.
