Update CHANGES.txt for version v1.3.9
Updated version to v1.3.9 and added support for Plex Media Server in snap.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,8 @@
-v1.2.8-RC
+v1.3.9
+- Added support for Plex Media Server installed in snap.
+  - Set snap=yes in backup_linux_plex.config
+
+v1.2.8
 - Added optional support to send an email of the log after a backup.
   - Set the to and from email addresses in backup_linux_plex.config
   - Requires msmtp (most distros include msmtp).
